# General

./: .gitignore  sandbox.py
fastapi/: pyproject.toml
fastapi_example/: pyproject.toml
fastapi_example/app/: main.py  oauth2.py  requests_psy.py  schemas.py  steps.py  utils.py
fastapi_example/app/database/: db_connection.py  models.py
fastapi_example/routers/: auth.py  thoughts.py  users.py
venv_example/: main.py
